# geocrop

./: .gitignore  CMakeLists.txt  Makefile  README.md  geocrop  geocrop.cpp  main.cpp  version.h
cmake/Modules/: FindGDAL.cmake
